tests/snapshots/examples_fixtures/Modules__Blue__Quill.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/Modules/Blue/Quill.flx
== compile ==
failed (module)
== diagnostics ==
--> compiler error[E024]: MODULE PATH MISMATCH

Module name `Modules.Blue.Quill` doesn't match file path `examples/Modules/Blue/Quill.flx`.

  --> examples/Modules/Blue/Quill.flx:1:1
  |
1 | module Modules.Blue.Quill {
  | ^

Hint:
  Rename the module or move the file to match.
== stdout ==
<not executed>
